# ros2-embedded-bridge

./: LICENSE  README.md  pyproject.toml
ros2_embedded_bridge/: node.py
